traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:5: error: value update is not a member of Int
   if(getY()=0 || getX()=6){
      ^TraversalDiagonal:5: error: value || is not a member of Int
   if(getY()=0 || getX()=6){
               ^